Add posts component and card

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,5 +1,3 @@
-<p>
-  @for (post of posts(); track post.id) {
-  {{ post.title }}
-  }
-</p>
+@for (post of posts(); track post.id) {
+<app-post-card [post]="post"></app-post-card>
+}
