Add post page and homepage

--- a/src/app/posts/post-card/post-card.component.html
+++ b/src/app/posts/post-card/post-card.component.html
@@ -1,6 +1,7 @@
 <p-card
   header="{{ post.title }}"
-  [style]="{ width: '25rem', 'margin-bottom': '2em' }"
+  [style]="{ width: '25rem', 'margin-bottom': '2em', cursor: 'pointer' }"
+  (click)="onClick()"
 >
   <p>
     {{ post.body }}
