Add image to card

--- a/src/app/posts/post-card/post-card.component.html
+++ b/src/app/posts/post-card/post-card.component.html
@@ -3,6 +3,9 @@
   [style]="{ width: '25rem', 'margin-bottom': '2em', cursor: 'pointer' }"
   (click)="onClick()"
 >
+  <ng-template pTemplate="header">
+    <img alt="Card" src="{{ post.image }}" />
+  </ng-template>
   <div>
     <p>
       {{ post.body | truncate : 500 }}
