--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,5 @@
-@for (post of posts(); track post.id) {
-<app-post-card [post]="post"></app-post-card>
-}
+<div class="grid-container">
+  @for (post of posts(); track post.id) {
+  <app-post-card [post]="post"></app-post-card>
+  }
+</div>
