--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
     <p-button
       label="New post"
       icon="pi pi-plus"
-      (onClick)="navigateToLogin()"
+      (onClick)="navigateToNewPost()"
     />
     <p-button label="Logout" icon="pi pi-sign-out" (onClick)="logOut()" />
     }
