--- a/src/app/posts/new-post/new-post.component.html
+++ b/src/app/posts/new-post/new-post.component.html
@@ -1,1 +1,33 @@
-<p>new-post works!</p>
+<div class="form">
+  <div class="header">
+    <h1>New blog post</h1>
+    <p-button (onClick)="submitPost()">Submit</p-button>
+  </div>
+  <form [formGroup]="postGroup">
+    <div class="title">
+      <p-floatLabel>
+        <input formControlName="title" pInputText id="title" />
+        <label for="title">Title</label>
+      </p-floatLabel>
+    </div>
+    <div class="image">
+      <p-floatLabel>
+        <input formControlName="image" pInputText id="image" />
+        <label for="image">Image url</label>
+      </p-floatLabel>
+    </div>
+    <p-editor formControlName="body" [style]="{ height: '320px' }">
+      <ng-template pTemplate="header">
+        <span class="ql-formats">
+          <button type="button" class="ql-bold" aria-label="Bold"></button>
+          <button type="button" class="ql-italic" aria-label="Italic"></button>
+          <button
+            type="button"
+            class="ql-underline"
+            aria-label="Underline"
+          ></button>
+        </span>
+      </ng-template>
+    </p-editor>
+  </form>
+</div>
