--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <div class="logo">Blog</div>
+  <h1 class="logo">Blog</h1>
   <div class="button-container">
     @if (!isAuthenticated()) {
     <p-button
