--- a/src/app/posts/post-page/post-page.component.html
+++ b/src/app/posts/post-page/post-page.component.html
@@ -30,7 +30,5 @@
     />
     <p-chip label="{{ post.publishedOn | date }}" />
   </div>
-  <div class="body">
-    <p>{{ post.body }}</p>
-  </div>
+  <div class="body" [innerHTML]="post.body"></div>
 </div>
