--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,5 +1,7 @@
 .grid-container {
   display: grid;
+  border: solid 1px red;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 10em;
+  justify-content: center;
 }
