--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,14 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .form {
   display: flex;
   flex-direction: column;
   gap: 1em;
+}
+.control {
+  margin-top: 1em;
 }
