--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,30 @@
-<p-toast />
-<form [formGroup]="loginForm" class="form">
-  <p-floatLabel>
-    <input pInputText id="username" formControlName="username" />
-    <label for="username">Username</label>
-  </p-floatLabel>
-  <p-floatLabel>
-    <p-password
-      formControlName="password"
-      [feedback]="false"
-      [toggleMask]="true"
-    />
-    <label for="password">Password</label>
-  </p-floatLabel>
-  <p-button
-    label="Login"
-    [loading]="loading"
-    icon="pi pi-sign-in"
-    [disabled]="loginForm.invalid"
-    (onClick)="onSubmit()"
-  />
-</form>
+<div class="container">
+  <p-toast />
+  <form [formGroup]="loginForm" class="form">
+    <div class="control">
+      <p-floatLabel>
+        <input pInputText id="username" formControlName="username" />
+        <label for="username">Username</label>
+      </p-floatLabel>
+    </div>
+    <div class="control">
+      <p-floatLabel>
+        <p-password
+          formControlName="password"
+          [feedback]="false"
+          [toggleMask]="true"
+        />
+        <label for="password">Password</label>
+      </p-floatLabel>
+    </div>
+    <div class="control">
+      <p-button
+        label="Login"
+        [loading]="loading"
+        icon="pi pi-sign-in"
+        [disabled]="loginForm.invalid"
+        (onClick)="onSubmit()"
+      />
+    </div>
+  </form>
+</div>
